syntax = "proto3";

option go_package = "webinar-service/internal/protos/server_old";

package webinar.protobuf;

service Dummy {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}
  

message HelloRequest {
    string msg = 1;
}

message HelloResponse {
    string msg = 1;
}