syntax = "proto3";

option go_package = "webinar-service/internal/protos/v2/dummy/model";

package practicum.go.grpc_webinar.v2.dummy.model;

import "model/hello_transformation.proto";

message HelloRequest {
    reserved 1;
    string msg = 2;
    string locale = 3;
    optional HelloTransformation transformation = 4;
    int64 clientID = 5;
}